{
    "name": "InputActions",
    "maps": [
        {
            "name": "Map_Gameplay",
            "id": "b17f6048-0eca-48d4-80d5-e61756f314da",
            "actions": [
                {
                    "name": "Axn_PlayerMove",
                    "type": "Value",
                    "id": "ead4689b-9687-4efe-bdf4-69a9d8774a0e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Axn_MouseRealease",
                    "type": "Button",
                    "id": "0992c1a8-b81a-4613-94c5-64d8ad09b1d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Axn_MousePosition",
                    "type": "Value",
                    "id": "25bbc420-1c2b-43d9-bd49-31887ee5e81d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                },
                {
                    "name": "Axn_Ping",
                    "type": "Button",
                    "id": "1bb8d660-6a67-4b1a-bb63-55d62869092b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Arrows",
                    "id": "9eaa3c65-ade9-4adc-80b7-6611fd866154",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Axn_PlayerMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4bb6da9d-3dfe-48e7-a59c-18f2074110eb",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Axn_PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "917dc226-caf6-4c35-a93c-8ff388fa93c0",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Axn_PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "18fa5ad3-ef03-4a66-a149-1476fda8018d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Axn_PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1198c8ee-0da3-480e-934e-9bd806201a58",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Axn_PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ea14f93b-14b8-4dbd-9273-3a492951676a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Axn_MouseRealease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f45c5cc-5b37-451c-915b-1a3dfa2cadc8",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Axn_MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ffebaef-fec3-418c-822a-76e9e1bbf0a6",
                    "path": "<Keyboard>/f2",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Axn_Ping",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Map_Login",
            "id": "f1016748-525e-4398-93dd-e678078e2d06",
            "actions": [
                {
                    "name": "Axn_Enter",
                    "type": "Button",
                    "id": "97754822-0dc1-40d0-a5ad-e5013e2e3528",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Axn_Escape",
                    "type": "Button",
                    "id": "8716fad9-d1d3-4b1b-9306-4f9e8b430605",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "08911c33-b93d-40f1-93c1-a71ac6ad14ac",
                    "path": "<Keyboard>/enter",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Axn_Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bd01805-1a8e-4789-ab10-2273b4a613e8",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Axn_Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Map_UI",
            "id": "751ff963-f42b-4651-a9a6-3644752f6686",
            "actions": [
                {
                    "name": "Axn_FullScreenToggle",
                    "type": "Button",
                    "id": "c8136f3c-62ae-4ce6-b2ca-fc74aaea2f9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "746d9e8d-8544-4e26-a8ed-1871b0faed29",
                    "path": "<Keyboard>/f11",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Axn_FullScreenToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}